# net-ninja

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
src/backend/: .env.example  Cargo.toml  config.example.toml  tauri.conf.json
src/backend/examples/: test_browser_timing.rs  test_cdp_concurrency.rs  test_parallel_browsers.rs
src/backend/migrations/: 20260121000000_create_migrations_table.sql  20260121000001_create_lines.sql  20260121000002_create_quota_results.sql  20260121000003_create_speed_tests.sql  20260121000004_create_emails.sql  20260121000005_create_logs.sql  20260121000006_create_jobs.sql  20260121000007_create_smtp_configs.sql  20260121000008_add_line_fields.sql  20260121000009_add_quota_result_fields.sql  20260121000010_add_speed_test_fields.sql  20260121000011_add_smtp_config_fields.sql  20260121000012_add_line_active.sql  20260122000001_create_tasks.sql  20260122000002_create_task_lines.sql  20260122000003_add_task_is_active_and_task_types.sql  20260123000001_fix_speed_test_column_types.sql  20260124000001_create_task_executions.sql  20260124000002_drop_scheduled_jobs.sql  20260124000003_fix_process_id_blob_to_text.sql  20260124000004_create_task_notification_configs.sql  20260128000001_add_execution_timeout_fields.sql  20260203000001_create_scheduler_lock_and_service_info.sql  20260207000001_add_logs_line_id.sql  20260209000001_add_smtp_vendor.sql  20260213000001_add_task_show_browser.sql  README.md
src/backend/src/: app.rs  lib.rs  main.rs
src/backend/src/adapters/tauri/: app.rs  emails.rs  health.rs  lines.rs  logs.rs  mod.rs  reports.rs  results.rs  scheduler.rs  smtp_configs.rs  task_notification_configs.rs  tasks.rs
src/backend/src/bootstrap/: mod.rs  standalone.rs
src/backend/src/clients/: chrome_installer.rs  mod.rs  network_diagnostics.rs  quota_debug_log.rs  speedtest_debug_log.rs  webdriver.rs
src/backend/src/clients/ookla_speedtest/: client.rs  config.rs  download.rs  latency.rs  mod.rs  models.rs  server_selector.rs  throughput.rs  upload.rs
src/backend/src/config/: mod.rs  paths.rs
src/backend/src/crypto/: encryption.rs
src/backend/src/db/: migrations.rs  mod.rs  pool.rs
src/backend/src/errors/: mod.rs
src/backend/src/jobs/: cleanup_job.rs  execution_timeout_job.rs  mod.rs  quota_check_job.rs  speed_test_job.rs  task_scheduler_job.rs
src/backend/src/models/: email.rs  line.rs  log.rs  mod.rs  quota_result.rs  report.rs  smtp_config.rs  speed_test_result.rs  task.rs  task_execution.rs  task_notification_config.rs  types.rs
src/backend/src/repositories/: email_repository.rs  line_repository.rs  log_repository.rs  mod.rs  quota_result_repository.rs  smtp_config_repository.rs  speed_test_repository.rs  task_execution_repository.rs  task_notification_config_repository.rs  task_repository.rs
src/backend/src/service/: install.rs  lock.rs  logging.rs  mod.rs  scheduler.rs  windows.rs
src/backend/src/services/: email_service.rs  ews_client.rs  line_service.rs  log_service.rs  mod.rs  notification_service.rs  quota_check_service.rs  report_service.rs  smtp_config_service.rs  speed_test_service.rs  task_execution_service.rs  task_notification_config_service.rs  task_runtime.rs  task_service.rs
src/backend/src/templates/: mod.rs  notification_email.rs
src/backend/tests/: integration_tests.rs  unit_tests.rs
src/backend/tests/integration/: db_pool_integration_test.rs  migration_runner_test.rs  mysql_types_test.rs  postgres_types_test.rs  sqlite_types_test.rs  webdriver_parallel_test.rs
src/backend/tests/unit/: database_type_test.rs  db_pool_test.rs  decimal_value_test.rs  process_id_test.rs  timestamp_test.rs  webdriver_mutex_test.rs
src/frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/frontend/src-tauri/capabilities/: default.json
src/frontend/src-tauri/nsis/: installer-hooks.nsh
src/frontend/src-tauri/src/: lib.rs
(+110 files in other folders)
