[package]
name = "netninja-desktop"
version = "0.1.3"
description = "NetNinja desktop application -- Tauri shell"
authors = ["NetNinja Team"]
license = "MIT"
repository = "https://github.com/AdelDima/netninja"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
net-ninja = { path = "../../backend" }
tokio = { version = "1", features = ["sync"] }

[profile.dev]
# Completely disable debug info to prevent PDB errors on Windows
debug = 0
split-debuginfo = "off"
incremental = false
debug-assertions = false
overflow-checks = false

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "unwind"
